[package]
name = "grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "derive", "color"] }
colored = "2.0.0"
comfy-table = "6.1.2"
dirs = "4.0.0"
toml_edit = "0.15.0"
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
